<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/remindersFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/nav_reminders" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/analysisFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_analysis" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
